# ZerOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  boot.S  clean.sh  config.sh  env.sh  grub.cfg  iso.sh  qemu-native.sh  qemu-wsl.ps1  qemu-wsl.sh  qemu.sh
arch/i386/: Makefile  boot.S  boot.o.l  debug.c  gdt.c  gdt_flush.S  gdt_flush.o.l  idt.c  idt_load.S  isrs.c  isrs_asm.S  linker.ld  paging.c  paging_asm.S  ports.c  serial.c  setup.c  tty.c  vga.c
arch/x86_64/: boot.S
include/kernel/: asm.h  multiboot.h  paging.h  serial.h  system.h  vbe.h
kernel/: Makefile  kernel.c  v86.S  v86.o.l
kernel/arch/i386/: boot.S  tty.c
kernel/kernel/: kernel.c
lib/: Makefile
lib/include/: math.h  stdio.h
lib/stdio/: getchar.c  gets.c  printf.c  putchar.c
lib/stdlib/: cast.c
libc/: Makefile
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c
libc/stdlib/: abort.c
